--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.liujc.rnbridge">
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:name=".MainApplication"
@@ -21,6 +23,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".RNActivity"/>
+        <activity android:name=".RN2Activity"/>
+        <activity android:name=".RNTest3Activity"/>
         <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
 
     </application>
