--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         </activity>
         <activity android:name=".RNActivity"/>
         <activity android:name=".RN2Activity"/>
-        <activity android:name=".RNTest3Activity"/>
+        <activity android:name=".RNRemoteActivity"/>
         <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
 
     </application>
