--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,8 @@ dependencies {
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation 'com.facebook.react:react-native:+'
     implementation project(':react-native-bridge')
-
+//    implementation 'com.alibaba:fastjson:1.1.71.android'
+//    implementation 'com.android.util:react-native-bridge:1.0.1'
     /* Retrofit */
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
